inline button for config

--- a/config.json
+++ b/config.json
@@ -20,6 +20,9 @@
         },
         "43524365346": {
             "lan": "uz"
+        },
+        "1258594598": {
+            "lan": "en"
         }
     }
 }
